--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -22,6 +22,9 @@ knitr::opts_chunk$set(echo = TRUE)
 # Create awesome HTML table with knitr::kableand kableExtra
 # LinkL https://haozhu233.github.io/kableExtra/awesome_table_in_html.html
 
+# Examples of how to use the ggrepel package
+# Link: https://cran.r-project.org/web/packages/ggrepel/vignettes/ggrepel.html#examples
+
 # Packages for data analysis
 library(tidyverse)
 library(lme4)
@@ -31,9 +34,10 @@ library(svMisc)
 library(MuMIn)
 library(modelr)
 library(sjstats)
+library(robustlmm)
+library(ggrepel)
 library(knitr)
 library(kableExtra)
-library(robustlmm)
 
 # Functions used is documents ----
 remove_measures_with_given_value <- function(data_set, col_name, value){
