--- a/bibliography.bib
+++ b/bibliography.bib
@@ -33,6 +33,23 @@ title = {{Exploratory data analysis}},
 year = {1977}
 }
 
+@article{Johnson2014,
+author = {Johnson, Paul C.D.},
+doi = {10.1111/2041-210X.12225},
+editor = {O'Hara, Robert B.},
+file = {:C$\backslash$:/Users/jamia/Box/Mendeley Desktop/Johnson - 2014 - Extension of Nakagawa {\&} Schielzeth's R 2 GLMM to random slopes models.pdf:pdf},
+issn = {2041210X},
+journal = {Methods in Ecology and Evolution},
+month = {sep},
+number = {9},
+pages = {944--946},
+title = {{Extension of Nakagawa {\&} Schielzeth's R 2 GLMM to random slopes models}},
+url = {http://doi.wiley.com/10.1111/2041-210X.12225},
+volume = {5},
+year = {2014}
+}
+
+
 @article{Koller2016,
 author = {Koller, Manuel},
 doi = {10.18637/jss.v075.i06},
@@ -59,3 +76,15 @@ title = {{Robust statistical methods: A primer for clinical psychology and exper
 volume = {98},
 year = {2017}
 }
+
+@book{Galecki2013,
+abstract = {Linear mixed-effects models (LMMs) are an important class of statistical models that can be used to analyze correlated data. Such data are encountered in a variety of fields including biostatistics, public health, psychometrics, educational measurement, and sociology. This book aims to support a wide range of uses for the models by applied researchers in those and other fields by providing state-of-the-art descriptions of the implementation of LMMs in R. To help readers to get familiar with the features of the models and the details of carrying them out in R, the book includes a review of the most important theoretical concepts of the models. The presentation connects theory, software and applications. It is built up incrementally, starting with a summary of the concepts underlying simpler classes of linear models like the classical regression model, and carrying them forward to LMMs. A similar step-by-step approach is used to describe the R tools for LMMs. All the classes of linear models presented in the book are illustrated using real-life data. The book also introduces several novel R tools for LMMs, including new class of variance-covariance structure for random-effects, methods for influence diagnostics and for power calculations. They are included into an R package that should assist the readers in applying these and other methods presented in this text. Andrzej Ga{\l}ecki is a Research Professor in the Division of Geriatric Medicine, Department of Internal Medicine, and Institute of Gerontology at the University of Michigan Medical School, and is Research Scientist in the Department of Biostatistics at the University of Michigan School of Public Health. He earned his M.Sc. in applied mathematics (1977) from the Technical University of Warsaw, Poland, and an M.D. (1981) from the Medical University of Warsaw. In 1985 he earned a Ph.D. in epidemiology from the Institute of Mother and Child Care in Warsaw (Poland). He is a member of the Editorial Board of the Open Journal of Applied Sciences. Since 1990, Dr. Galecki has collaborated with researchers in gerontology and geriatrics. His research interests lie in the development and application of statistical methods for analyzing correlated and over- dispersed data. He developed the SAS macro NLMEM for nonlinear mixed-effects models, specified as a solution to ordinary differential equations. He also proposed a general class of variance-covariance structures for the analysis of multiple continuous dependent variables measured over time. This methodology is considered to be one of first approaches to joint models for longitudinal data.   Tomasz Burzykowski is Professor of Biostatistics and Bioinformatics at Hasselt University (Belgium) and Vice-President of Research at the International Drug Development Institute (IDDI) in Louvain-la-Neuve (Belgium). He received the M.Sc. degree in applied mathematics (1990) from Warsaw University, and the M.Sc. (1991) and Ph.D. (2001) degrees from Hasselt University. He has held guest professorships at the Karolinska Institute (Sweden), the Medical University of Bialystok (Poland), and the Technical University of Warsaw (Poland). He serves as Associate Editor of Biometrics. Dr. Burzykowski published methodological work on survival analysis, meta-analyses of clinical trials, validation of surrogate endpoints, analysis of gene expression data, and modelling of peptide-centric mass-spectrometry data. He is also a co-author of numerous papers applying statistical methods to clinical data in different disease areas.},
+address = {New York, NY},
+author = {Galecki, Andrzej},
+editor = {Burzykowski, Tomasz},
+keywords = {Electronic books,Linear models (Statistics),R (Computer program language)},
+publisher = {New York, NY : Springer New York : Imprint: Springer},
+title = {{Linear mixed-effects models using r a step-by-step approach / Andrzej Galecki, Tomasz Burzykowski.}},
+year = {2013}
+}
+
