Change output type to console
I made this change because I think it is easier to read. This may not be true for others.

--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -8,6 +8,8 @@ output:
   word_document: 
 csl: apa.csl
 Date: '2019-02-01'
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
